PWA-1159 - fix manage users view on Safari

--- a/client/app/features/main/dashboard/manageUsers/manageUsers.scss
+++ b/client/app/features/main/dashboard/manageUsers/manageUsers.scss
@@ -2,14 +2,16 @@
 @import "client/app/shared/styles/variables";
 
 .manage-users {
+	position: relative;
+
 	sticky-scroll {
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
 		overflow-y: scroll;
 		width: 100%;
 		height: 100%;
-	}
-
-	.layout-left-right {
-		flex: 1;
 	}
 
 	.main-content-right {
